force-app/main/default/objects/Grant_Solicitation_Rounds__c/Grant_Solicitation_Rounds__c.object-meta.xml
<CustomObject>
    <label>Grant/Solicitation Rounds</label>
    <nameField>
        <label>Round Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant/Solicitation Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>