force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Concept_Paper_Finalize_Score__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Finalize_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Paper Finalize Score</label>
    <type>Checkbox</type>
</CustomField>