force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Concept_Paper_Finalize_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Finalize_Score_Date__c</fullName>
    <label>Concept Paper Finalize Score Date</label>
    <type>DateTime</type>
</CustomField>