force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Proposal Due Date</label>
    <type>DateTime</type>
</CustomField>