force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Notify_Review_Team_Concept_Paper__c.field-meta.xml
<CustomField>
    <fullName>Notify_Review_Team_Concept_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-01055/S-00724: Single email for scoring team when Under Review is updated.</description>
    <label>Notify Review Team - Concept Paper</label>
    <type>Checkbox</type>
</CustomField>