force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Override_5pm_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Override_5pm_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>00015302 - Override 5pm Deadline</description>
    <label>Override 5pm Deadline</label>
    <type>Checkbox</type>
</CustomField>