force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Proposal_Finalize_Score__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Finalize_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Finalize Score</label>
    <type>Checkbox</type>
</CustomField>