force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Proposal_Finalize_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Finalize_Score_Date__c</fullName>
    <label>Proposal Finalize Score Date</label>
    <type>DateTime</type>
</CustomField>