force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Proposal_Review__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Review__c</fullName>
    <formula>HYPERLINK(&apos;/apex/CORE_Proposal_Review_Page?solicitationID=&apos;&amp;CASESAFEID(Solicitation__c)&amp;&apos;&amp;round=&apos;&amp; Id, &apos;Proposal Review&apos;)</formula>
    <label>Proposal Review</label>
    <type>Text</type>
</CustomField>