force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Resubmission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Due_Date__c</fullName>
    <description>SF-31942 - Resubmission Due Date for the resubmission mode, where applicable. Proposals cannot be resubmitted after this date. Entering a value here indicates that the solicitation will accept resubmission once initiated from the proposal review page by designated users.</description>
    <inlineHelpText>Resubmission Due Date for the resubmission mode, where applicable. Proposals cannot be resubmitted after this date. Entering a value here indicates that the solicitation will accept resubmission once initiated from the proposal review page by designated users.</inlineHelpText>
    <label>Resubmission Due Date</label>
    <type>DateTime</type>
</CustomField>