force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I-05205 To Clarify conga composer provisioning/revocation requirements</description>
    <label>Review Completed</label>
    <type>Checkbox</type>
</CustomField>