force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Scoring_Committee_Date__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Committee_Date__c</fullName>
    <label>Scoring Committee Date</label>
    <type>Date</type>
</CustomField>