force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <label>Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Solicitation Rounds</relationshipLabel>
    <relationshipName>Solicitation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>