force-app/main/default/objects/Grant_Solicitation_Rounds__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Round status does not change in any way except manually. The &quot;Open&quot; round with the closest due date is automatically the round which submissions are held.</description>
    <inlineHelpText>Round status does not change in any way except manually. The &quot;Open&quot; round with the closest due date is automatically the round which submissions are held.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>